	- Add multibyte/wide character support, so that we don't end up
	  with a string that contains only part of a multibyte
	  character during tab completion. (DLR)
  do_browser()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
	- When displaying "(dir)" in the available screen space, make
	  sure that the string it's stored in is always null-terminated.
	  (DLR)
  save_history()
	- Properly save history when in view mode. (DLR)
- global.c:
  shortcut_init()
	- Move the "Refresh" and "Exit" shortcuts to the beginning of
	  the help browser shortcut list, for consistency. (DLR)
	- Remove unnecessary "Refresh" placeholder in the file browser
	  shortcut list. (DLR)
	- Allow the mark to be used in view mode, as Pico does. (DLR)
  thanks_for_all_the_fish()
	- Remove free_toggles() and move its code here verbatim, as it's
	  only called here anyway. (David Benbennick)
	- Fix the code to free all open file buffers to work properly
	  with the previous overhaul of the multibuffer code instead of
	  going into an infinite loop. (David Benbennick)
	- Add additional checks for variables' not being NULL before we
	  try to free them, to avoid assertion failures. (DLR)
- nano.c:
  die()
	- Rename variable ret to retval for consistency. (DLR)
	- Tweak the message displayed when a backup file can't be
	  written, so as to not duplicate a translated string. (DLR)
	- If the current filestruct's been partitioned, unpartition it
	  before saving the associated file. (DLR)
  resize_variables()
	- Use charset() instead of memset() to initialize hblank. (DLR)
  copy_filestruct()
	- Rename variable prev to copy to avoid confusion. (DLR)
  print1opt_full()
	- If desc should be empty, allow it to be NULL instead of
	  "", since the latter is not necessarily translated as "".
	  (DLR, found by Jordi)
  usage()
	- Add missing N_() around one message, so that it isn't
	  erroneously translated twice. (DLR)
  do_tab()
	- Remove unneeded variable kbinput. (DLR)